页面注释和文字改成英文

--- a/detail.html
+++ b/detail.html
@@ -7,53 +7,50 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-status-bar-style" content="black">
-		<!--标准mui.css-->
 		<link rel="stylesheet" href="css/mui.min.css">
 		<link rel="stylesheet" type="text/css" href="css/icons-extra.css" />
-		<!--App自定义的css-->
-		<!--<link rel="stylesheet" type="text/css" href="../css/app.css" />-->
 	</head>
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">商品名称</h1>
+			<h1 class="mui-title">product name</h1>
 			<a class="mui-icon mui-icon-more mui-icon-right-nav mui-pull-right"></a>
 		</header>
 		<div class="mui-content">
 			<div id="slider" class="mui-slider" >
 			<div class="mui-slider-group mui-slider-loop">
-				<!-- 额外增加的一个节点(循环轮播：第一个节点是最后一张轮播) -->
+				<!-- An additional number of nodes (rounds: the first node is the last rotation) -->
 				<div class="mui-slider-item mui-slider-item-duplicate">
 					<a href="#">
 						<img src="images/yuantiao.jpg">
 					</a>
 				</div>
-				<!-- 第一张 -->
+				<!-- first -->
 				<div class="mui-slider-item">
 					<a href="#">
 						<img src="images/shuijiao.jpg">
 					</a>
 				</div>
-				<!-- 第二张 -->
+				<!-- second -->
 				<div class="mui-slider-item">
 					<a href="#">
 						<img src="images/muwu.jpg">
 					</a>
 				</div>
-				<!-- 第三张 -->
+				<!-- third -->
 				<div class="mui-slider-item">
 					<a href="#">
 						<img src="./images/cbd.jpg">
 					</a>
 				</div>
-				<!-- 第四张 -->
+				<!-- fourth -->
 				<div class="mui-slider-item">
 					<a href="#">
 						<img src="./images/yuantiao.jpg">
 					</a>
 				</div>
-				<!-- 额外增加的一个节点(循环轮播：最后一个节点是第一张轮播) -->
+				<!--An additional one of the nodes (loop rotation: the last node is the first rotation) -->
 				<div class="mui-slider-item mui-slider-item-duplicate">
 					<a href="#">
 						<img src="./images/shuijiao.jpg">
@@ -69,7 +66,7 @@
 		</div>
 		<ul class="mui-table-view">
 		        <li class="mui-table-view-cell">
-		            <p>商品名称 商品名称商品名称商品名称商品名称商品名称 </p>
+		            <p>Product Name Product Name Product Name Product Name Product Name </p>
 		            <div style="float: right; margin-top: -1em;">
 		            	<div  id="zanhou" style="display:none;margin-right: 1em;" onclick="dianzan(this.id)">
 		            		<img src="./images/goodafter.png" width="21px" height="21px" >
@@ -79,34 +76,34 @@
 						</div>
 		            </div>
 		            <span style="color: #000000; float: right;margin-right: -2em;margin-top: -0.8em;" id="zanshu">2</span>
-		            <div style="margin-top: 1em;line-height: 1.5em;">内容内容内容内容内容内容内容内容内容</div>
+		            <div style="margin-top: 1em;line-height: 1.5em;">Content Content Contents Content Contents Content Contents Content</div>
 		        </li>
 		   </ul>
 		</div>
 		<div style="padding-left: 1em; margin-top: 1em;">
-		<!--分类按钮-->
+		<!--Classification button-->
 		<button type="button" class="mui-btn mui-btn-outlined mui-btn-grey" style="color: grey; width:6em;font-size: 0.7em;">
-			分类
+			classification
 		</button>
 		<button type="button" class="mui-btn mui-btn-outlined mui-btn-grey" style="color: grey; width:6em;font-size: 0.7em;">
-			关键字
+			Keywords
 		</button>
 		<button type="button" class="mui-btn mui-btn-outlined mui-btn-grey" style="color: grey; width:6em;font-size: 0.7em;">
-			关键字2
+			Keyword 2
 		</button>
 		</div>
 		<!--comment list-->
-		<h5>评论列表</h5>
+		<h5>comment list</h5>
 		<ul class="mui-table-view">
 		    <li class="mui-table-view-cell mui-media">
 		        <a href="javascript:;">
 		            <img class="mui-media-object mui-pull-left" src="./images/logo.png" style="border-radius: 50%;">
 		            <div class="mui-ellipsis">
-		            	<span style="font-size: 12px;">小紫</span>
+		            	<span style="font-size: 12px;">Purple</span>
 		            	<div style="font-size: 12px;margin-top: -1.7em;margin-left: 5em;">2017-03-24</div>
 		            </div>
 		            <div class="mui-media-body">
-		                <p class="mui-ellipsis">能和心爱的人一起睡觉，是件幸福的事情；可是，打呼噜怎么办？</p>
+		                <p class="mui-ellipsis">Can be with the beloved people to sleep together, is a happy thing; but, how to do snoring?</p>
 		            </div>
 		        </a>
 		    </li>
@@ -114,11 +111,11 @@
 		        <a href="javascript:;">
 		            <img class="mui-media-object mui-pull-left" src="./images/shuijiao.jpg" style="border-radius: 50%;">
 		            <div class="mui-ellipsis">
-		            	<span style="font-size: 12px;">小花</span>
+		            	<div style="font-size: 12px;">Flowers</div>
 		            	<div style="font-size: 12px;margin-top: -1.7em;margin-left: 5em;">2017-03-24</div>
 		            </div>
 		            <div class="mui-media-body">
-		                <p class="mui-ellipsis">想要这样一间小木屋，夏天挫冰吃瓜，冬天围炉取暖.</p>
+		                <p class="mui-ellipsis">Want to such a small hut, summer ice-eating melon, winter furnace heating.</p>
 		            </div>
 		        </a>
 		    </li>
@@ -126,24 +123,24 @@
 		        <a href="javascript:;">
 		            <img class="mui-media-object mui-pull-left" src="./images/muwu.jpg" style="border-radius: 50%;">
 		            <div class="mui-ellipsis">
-		            	<span style="font-size: 12px;">小绿</span>
+		            	<span style="font-size: 12px;">Green</span>
 		            	<div style="font-size: 12px;margin-top: -1.7em;margin-left: 5em;">2017-03-24</div>
 		            </div>
 		            <div class="mui-media-body">
-		                <p class="mui-ellipsis">烤炉模式的城，到黄昏，如同打翻的调色盘一般.</p>
+		                <p class="mui-ellipsis">Oven mode of the city, to the evening, as the tipping of the palette in general.</p>
 		            </div>
 		        </a>
 		    </li>
 		</ul>
-		<!--评论-->
-		<h5>评论</h5>
+		<!--comment-->
+		<h5>comment</h5>
 		<div class="mui-input-row" style="margin: 1em 1em;">
 			<textarea placeholder="comment"></textarea>
-			<button type="button" class="mui-btn mui-btn-red mui-btn-block" style=" font-size: 14px; width: 27em;">提交</button>
+			<button type="button" class="mui-btn mui-btn-red mui-btn-block" style=" font-size: 14px; width: 27em;">submit</button>
 		</div>
 		<div style="border: 0.1em solid #CCCCCC;margin: 1em 1em ; "></div>
-		<!--分享-->
-			<h5 style="background-color:#efeff4;">分享</h5>
+		<!--share-->
+			<h5 style="background-color:#efeff4;">share to</h5>
 				<ul class="mui-table-view">
 				        <li class="mui-table-view-cell">
 				            <a class="">
@@ -154,21 +151,21 @@
 				            </a>
 				        </li>
 				  </ul>
-		<!--出品人信息-->
+		<!--Producer information-->
 		<div style="">
-			<h5 style="background-color:#efeff4">出品人信息</h5>
+			<h5 style="background-color:#efeff4">Producer information</h5>
 			<ul class="mui-table-view">
 			        <li class="mui-table-view-cell">
 			            <a class="">
 			                <div><img src="./images/logo.png" width="40" height="40"></div>
-			                <div style="margin-top: -2em;float: left;margin-left: 3em;color: grey;">河童</div>
+			                <div style="margin-top: -2em;float: left;margin-left: 3em;color: grey;">Kappa</div>
 			                <div style="float: right;margin-top: -2em;">
-			                	<img src="./images/location.png" width="25" height="25" style="margin-left: -1.5em;"><p style="color: #333333;font-size: 12px;margin-top: -2em;">大阪府</p></div>
+			                	<img src="./images/location.png" width="25" height="25" style="margin-left: -1.5em;"><p style="color: #333333;font-size: 12px;margin-top: -2em;">Osaka Prefecture</p></div>
 			            </a>
 			        </li>
 			        <li class="mui-table-view-cell">
 			            <a class="mui-navigate-right">
-			                 <h5>打分</h5>
+			                 <h5>Scoring</h5>
 			                 <div style="font-size: 12px;">
 			                 <sapn class="mui-icon mui-icon-star"></sapn>
 			                 <sapn class="mui-icon mui-icon-star"></sapn>
@@ -179,8 +176,8 @@
 			        </li>
 			   </ul>
 		</div>
-		<!--出品人关心的商品-->
-		<h5 style="background-color:#efeff4">出品者注目的商品一览</h5>
+		<!--Produce goods of concern-->
+		<h5 style="background-color:#efeff4">Produce goods of concern</h5>
 		<ul class="mui-table-view mui-grid-view">
 		        <li class="mui-table-view-cell mui-media mui-col-xs-3">
 		            <a href="#">
@@ -198,23 +195,23 @@
 		                <img class="mui-media-object" src="./images/yuantiao.jpg">
 		                </a></li>
 		    </ul> 
-		<!--推荐商品-->
-		<h5 style="background-color:#efeff4">推荐商品</h5>
+		<!--Recommended products-->
+		<h5 style="background-color:#efeff4">Recommended products</h5>
 		<div class="mui-slider">
 		        <div class="mui-slider-group mui-slider-loop">
-		        	<!-- 额外增加的一个节点(循环轮播：第一个节点是最后一个图文表格) -->
+		        	<!-- An additional number of nodes (loop rotation: the first node is the last graphic form) -->
 		            <div class="mui-slider-item mui-slider-item-duplicate">
 		                <ul class="mui-table-view mui-grid-view">
 		                    <li class="mui-table-view-cell mui-media mui-col-xs-6">
 		                    	<a href="#"><img class="mui-media-object" src="./images/cbd.jpg">
 		                            <div class="mui-media-body">Color of SIP CBD</div>
-		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">幸福</div>
+		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">happy</div>
 		                    	</a>
 		                    </li>
 		                    <li class="mui-table-view-cell mui-media mui-col-xs-6">
 		                    	<a href="#"><img class="mui-media-object" src="./images/yuantiao.jpg">
-		                            <div class="mui-media-body">静静看这世界</div>
-		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">幸福</div>
+		                            <div class="mui-media-body">Look at the world quietly</div>
+		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">happy</div>
 		                    	</a>
 		                    </li>
 		                </ul>
@@ -223,14 +220,14 @@
 		                <ul class="mui-table-view mui-grid-view">
 		                    <li class="mui-table-view-cell mui-media mui-col-xs-6">
 		                    	<a href="#"><img class="mui-media-object" src="./images/shuijiao.jpg">
-		                            <div class="mui-media-body">幸福就是可以一起睡觉</div>
-		                             <div class="mui-media-body" style="color: #777777;font-size: 12px;">幸福</div>
+		                            <div class="mui-media-body">Happiness is to sleep together</div>
+		                             <div class="mui-media-body" style="color: #777777;font-size: 12px;">happy</div>
 		                    	</a>
 		                    </li>
 		                    <li class="mui-table-view-cell mui-media mui-col-xs-6">
 		                    	<a href="#"><img class="mui-media-object" src="./images/muwu.jpg">
-		                            <div class="mui-media-body">想要一间这样的木屋，静静的喝咖啡</div>
-		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">幸福</div>
+		                            <div class="mui-media-body">Want a kind of such a wooden house, quietly drink coffee</div>
+		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">happy</div>
 		                    	</a>
 		                    </li>
 		                </ul>
@@ -240,31 +237,31 @@
 		                    <li class="mui-table-view-cell mui-media mui-col-xs-6">
 		                    	<a href="#"><img class="mui-media-object" src="./images/cbd.jpg">
 		                            <div class="mui-media-body">Color of SIP CBD</div>
-		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">幸福</div>
+		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">happy</div>
 		                    	</a>
 		                    </li>
 		                    <li class="mui-table-view-cell mui-media mui-col-xs-6">
 		                    	<a href="#"><img class="mui-media-object" src="./images/yuantiao.jpg">
-		                            <div class="mui-media-body">静静看这世界</div>
-		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">幸福</div>
+		                            <div class="mui-media-body">Look at the world quietly</div>
+		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">happy</div>
 		                    	</a>
 		                    </li>
 		                </ul>
 		            </div>
-		            <!-- 额外增加的一个节点(循环轮播：最后一个节点是第一个图文表格) -->
+		            <!-- An additional number of nodes (Rotation: the last node is the first graphic form)-->
 		            <div class="mui-slider-item mui-slider-item-duplicate">
 		                <ul class="mui-table-view mui-grid-view">
 		                    <li class="mui-table-view-cell mui-media mui-col-xs-6">
 		                    	<a href="#">
 		                    		<img class="mui-media-object" src="./images/shuijiao.jpg">
-		                            <div class="mui-media-body">幸福就是可以一起睡觉</div>
-		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">幸福</div>
+		                            <div class="mui-media-body">Happiness is to sleep together</div>
+		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">happy</div>
 		                    	</a>
 		                    </li>
 		                    <li class="mui-table-view-cell mui-media mui-col-xs-6">
 		                    	<a href="#"><img class="mui-media-object" src="./images/muwu.jpg">
-		                            <div class="mui-media-body">想要一间这样的木屋，静静的喝咖啡</div>
-		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">幸福</div>
+		                            <div class="mui-media-body">Want a kind of such a wooden house, quietly drink coffee</div>
+		                            <div class="mui-media-body" style="color: #777777;font-size: 12px;">happy</div>
 		                    	</a>
 		                    </li>
 		                </ul>
@@ -279,16 +276,16 @@
 		        </div>
 		    </div>
 		    
-		<!--商品交换，白送，点数交换信息按钮-->
+		<!--Commodity exchange, white send, point exchange information button-->
 		<div style="margin: 1em 0;">
 		<button type="button" class="mui-btn mui-btn-danger">
-			点数交换
+			Point exchange
 		</button>
 		<button type="button" class="mui-btn mui-btn-danger">
-			物物交换
+			barter
 		</button>
 		<button type="button" class="mui-btn mui-btn-danger">
-			白送
+			To send
 		</button>
 		</div>
 		<script src="js/mui.min.js"></script>
@@ -299,9 +296,9 @@
                 var self = plus.webview.currentWebview();
                 var tagertid = self.tagertid;
                 //alert(tagertid);
-                //关闭等待框
+                //Close the wait box
                 plus.nativeUI.closeWaiting();
-                //显示当前页面
+                //Displays the current page
                 mui.currentWebview.show();
             });
 		};
