--- a/forget_password.html
+++ b/forget_password.html
@@ -41,7 +41,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">找回密码</h1>
+			<h1 class="mui-title">Retrieve the password</h1>
 		</header>
 		<div class="mui-content">
 			<form class="mui-input-group">
@@ -52,12 +52,12 @@
 				</div>             	
                 -->
 				<div class="mui-input-row">
-					<label>邮箱</label>
-					<input id='email' type="email" class="mui-input-clear mui-input" placeholder="请输入注册邮箱">
+					<label>Mailbox</label>
+					<input id='email' type="email" class="mui-input-clear mui-input" placeholder="Please enter the registration email">
 				</div>
 			</form>
 			<div class="mui-content-padded">
-				<button id='sendMail' class="mui-btn mui-btn-block mui-btn-primary">提交</button>
+				<button id='sendMail' class="mui-btn mui-btn-block mui-btn-primary">submit</button>
 			</div>
 		</div>
 		<script src="js/mui.min.js"></script>
