--- a/user.html
+++ b/user.html
@@ -11,7 +11,7 @@
 	<body>
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-			<h1 class="mui-title">张三</h1>
+			<h1 class="mui-title">zhang san</h1>
 			<a class="mui-icon mui-icon-gear mui-pull-right" id="setting"></a>
 		</header>
 		<div class="mui-content" style="margin-bottom: 3em;">
@@ -19,7 +19,7 @@
 			        <li class="mui-table-view-cell" style="height: 13em;text-align: center;">
 			            <div style="margin-top: 4em;"><img src="images/muwu.jpg" width="100" height="100" style=" border-radius:50%"></div>
 			            <div style="margin-top: 0.2em;">
-			            <button type="button" class="mui-btn mui-btn-grey mui-btn-block" style="width: 150px;height: 30px;font-size: 14px;padding-top: 7px;margin-left: 7em;">编辑</button>
+			            <button type="button" class="mui-btn mui-btn-grey mui-btn-block" style="width: 150px;height: 30px;font-size: 14px;padding-top: 7px;margin-left: 7em;">Edit</button>
 			            </div>
 			        </li>
 			    </ul>
@@ -28,7 +28,7 @@
 					<ul class="mui-table-view mui-grid-view">
 					        <li class="mui-table-view-cell mui-media mui-col-xs-6">
 					            <a >
-					               <font color="#AAAAAA" size="2"> 都道府县未设定</font>
+					               <font color="#AAAAAA" size="2"> Metropolis is not set</font>
 					            </a>
 					        </li>
 					        <li class="mui-table-view-cell mui-media mui-col-xs-6">
@@ -53,30 +53,30 @@
 					        <li class="mui-table-view-cell mui-media mui-col-xs-6">
 					            <a class="mui-navigate-right">
 					                <font color="#AAAAAA" size="2">
-					                	取引履历
+					                	Take history
 					                </font>
 					            </a>
 					        </li>
 					        <li class="mui-table-view-cell mui-media mui-col-xs-6">
 					            <a class="">
 					                <font color="#AAAAAA" size="2">
-					                	今日失效数
-					                	<span style="float: right;"><font color="red"><b>0</b></font>枚</span>
+					                	Today's number of failures
+					                	<span style="float: right;"><font color="red"><b>0</b></font>pieces</span>
 					                </font>
 					            </a>
 					        </li>
 					        <li class="mui-table-view-cell mui-media mui-col-xs-6">
 					            <a >
 					                <font color="#AAAAAA" size="2">
-					                	所持数
-					                	<span style="float: right;"><font color="red"><b>4</b></font>枚</span>
+					                	The number of holdings
+					                	<span style="float: right;"><font color="red"><b>4</b></font> pieces</span>
 					                </font>
 					            </a>
 					        </li>
 					        <li class="mui-table-view-cell mui-media mui-col-xs-12" style="height: 3em;">
 					            <div>
-					            <button type="button" class="mui-btn mui-btn-red" style="width: 8em;">出品</button>
-					             <button type="button" class="mui-btn mui-btn-red" style="width: 8em;">按钮</button>
+					            <button type="button" class="mui-btn mui-btn-red" style="width: 8em;">Produced</button>
+					             <button type="button" class="mui-btn mui-btn-red" style="width: 8em;">Button</button>
 					            </div>
 					        </li>
 					    </ul>
@@ -88,7 +88,7 @@
 					 </div>
 				</div>		
 		</div>
-		<!--底部导航条-->
+		<!--Bottom navigation bar-->
 		<!--<nav class="mui-bar mui-bar-tab">
 			<a class="mui-tab-item" href="#tabbar" id="home">
 				<span class="mui-icon mui-icon-home"></span>
@@ -110,43 +110,43 @@
 		<script src="js/mui.min.js"></script>
 		<script type="text/javascript">
 			mui.init({
-				swipeBack: true //启用右滑关闭功能
+				swipeBack: true //Enable the right slide off function
 			});
-			//首页
+			//Home
 //		document.getElementById('home').addEventListener('tap',function(){
-//			//打开关于页面
+//			//Open about the page
 //		  mui.openWindow({
 //		    url: 'index.html',
 //		    id:'index',
 //		  });
 //		});
-//		//商品登陆
+//		//Merchandise landing
 //		document.getElementById('gdslogin').addEventListener('tap',function(){
-//			//打开关于页面
+//			//Open about the page
 //		  mui.openWindow({
 //		    url: 'exhibit.html',
 //		    id:'exhibit',
 //		  });
 //		});
-//		//聊天
+//		//to chat with
 //		document.getElementById('chats').addEventListener('tap',function(){
-//			//打开关于页面
+//			//Open about the page
 //		  mui.openWindow({
 //		    url: 'chatView.html',
 //		    id:'chatView',
 //		  });
 //		});
-//		//商品状态
+//		//Commodity status
 //		document.getElementById('gdszhuangtai').addEventListener('tap',function(){
-//			//打开关于页面
+//			//Open about the page
 //		  mui.openWindow({
 //		    url: 'request.html',
 //		    id:'request',
 //		  });
 //		});
-		//设置页面
+		//Set the page
 		document.getElementById('setting').addEventListener('tap',function(){
-			//打开关于页面
+			//Open about the page
 		  mui.openWindow({
 		    url: 'setting.html',
 		    id:'setting',
